# shinobi

./: .gitignore  README.md  pyproject.toml  requirements.txt  shinobi.py  shinobi.xlsx  start.py  start_server.py
deploy/: Dockerfile  docker-compose.yml
deploy_tg/: Dockerfile  docker-compose.yml
deploy_wb/: Dockerfile  docker-compose.yml
excel/: .env  .env.example  .gitignore  README.md  config.py  pyproject.toml  shinobi.xlsx  start_server.py
excel/parser/: parser.py
excel/parser/modules/: days.py  gcalendar.py
excel/webserver/: config.py  server.py
excel/webserver/scheduler/: scheduler.py
redis/: dump.rdb  redis.conf
telegram/: .env.example  .gitignore  bot.py  config.py  pyproject.toml  shinobi.py
telegram/exceptions/: database.py
telegram/handlers/: academic_hours.py  groups.py  main.py  schedule.py
telegram/modules/: days.py  groups.py  user_info.py  users.py
telegram/states/: new_group.py
telegram/utils/: builder.py  db.py
