[tool.poetry]
name = "telegram"
version = "1.0.0"
description = ""
authors = ["dex <dexkorzhov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
numpy = "^2.1.3"
loguru = "^0.7.2"
redis = "^5.2.0"
typing-extensions = "^4.12.2"
requests = "^2.32.3"
sanic = "^24.6.0"
apscheduler = "^3.10.4"
setuptools = "^75.5.0"
httpx = "^0.27.2"
google-api-python-client = "^2.154.0"
gcsa = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
