[tool.poetry]
name = "excel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
sanic = "23.3.0"
apscheduler = "^3.10.4"
setuptools = "^75.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
